Version 1.52:
	- Fixed a bug in the MPI code that makes Nx1 and 1xN grids work again
	- Fixed 32-bit overflow problems in the NFS square root (thanks Greg 
		Childers)
	- Fixed problems parsing arguments in the NFS square root (thanks
		Carlos Pinho)
	- Turned off asm in QS when compiling debug builds
	- Fixed Windows CPU time measurement (thanks Roman Rusakov)


Version 1.51: 2/17/13
	- Performed another massive overhaul of the GPU polynomial selection
		code; stage 1 now runs dozens to *hundreds* of times faster
		on a GPU
	- Added a thread pool implementation, and made GPU polynomial 
		selection multithread-capable. Eventually the CPU code should
		be overhauled to look more like the GPU code, it will 
		probably be able to run several times faster
	- Split stage 2 of NFS polynomial selection into the size optimization
		and root optimization portions, which can be invoked inde-
		pendently from the demo binary
	- Added a caching layer for reading in the matrix, to reduce the
		amount of disk IO required by an MPI grid (thanks Greg Childers)
	- Changed the main API to allow free-text strings for configuring NFS,
		then allowed all the parameters for polynomial selection to be
		specified when calling the library
	- Finally overhauled the Makefile to avoid everyone having to edit it
	- Fixed a potential 32-bit overflow in the hashtable code, that could
		occur for extremely large problems (thanks Paul Zimmermann)
	- Fixed the computation of alpha value when polynomials are linear
		(thanks Paul Zimmermann / Shi Bai)
	- Fixed a line sieve initialization problem (thanks Ilya Popovyan)


Version 1.50: 2/3/12
	- NFS polynomial selection changes:
		- Added a massive overhaul of the stage 1 GPU code by Jayson
		  King, making it both much simpler and much faster
		- Added a second size optimization pass when searching for
		  degree 6 polynomials. This makes stage 2 much more
		  reliable for very large problems
		- Fixed a bug translating the degree 6 root sieve to